# visuallearn-seaborn

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: clustering_example.py  demo_autovisualize.ipynb  demo_two_models.py  multiclass_classification.py  pytorch_visuals.py  quick_start.py  regression_example.py  sklearn_visuals.py  test_modelanalyzer.py
examples/.ipynb_checkpoints/: demo_autovisualize-checkpoint.ipynb
visuallearn/: __init__.py  activationtracker.py  autovisualizer.py  clusteringvisualizer.py  cnnvisualizer.py  combinedplot.py  framerecorder.py  gradienttracker.py  liveplotter.py  modelanalyzer.py  regressionvisualizer.py  utils.py  visualizer.py
visuallearn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
